styles.css
:root {
    --primary-color1: #4d9aff;
    --primary-color2: #57aae1;
    --primary-color3: #95cfeb;
    --primary-color4: #a5d8ff;

    --secondary-color1: #fff8e7;
    --secondary-color2: #eef8ff;
    --navbar-height: 3rem;
}

/* Resets */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    line-height: 1.5;
}

body {
    text-align: center;
}

a {
    text-decoration: none;
}

img {
    width: 100%;
    height: 100%;
}

li {
    list-style: none;
}


/* General */
h3 {
    font-size: 1.5rem;
    color: var(--primary-color2);
}

.contact-links {
    display: flex;
    gap: 1rem;
}

.contact-links li {
    width: 50px;
}

section {
    padding: 2rem;
}

body {
    margin-bottom: var(--navbar-height)
}



/* Navbar */
nav {
    display: flex;
    justify-content: center;
    align-items: center;
    height: var(--navbar-height);
    width: 100%;
    position: fixed;
    bottom: 0;
    background-color: #ddd9;
    /*Check later if this color will change to add it as a variable*/
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    z-index: 1;
}


nav h2 {
    display: none;

}

nav .links li {
    display: inline;
    margin: 0 1em;
}


@media only screen and (min-width:800px) {
    nav {
        position: sticky;
        top: 0;
    }

    nav h2 {
        display: inline;
    }

    nav {
        justify-content: space-between;
    }

    nav h2 {
        margin-left: 1em;
    }
}


/* Header */
header {
    background-color: var(--primary-color4);
    height: 100vh;

}

p {
    font-size: 1.2em;
}

.img-display {
    background-color: var(--primary-color4);
}

.img-display,
.info {
    padding: 2rem;
}

.img-display,
.info {
    width: 100%;
}

header .img-container {
    width: 400px;
    height: 400px;
    margin: 1rem auto;
}

#profile-img {
    border-radius: 50%;
}

.info * {
    margin-top: 1em;
}

.contact-links {
    display: flex;
    justify-content: center;
}

@media only screen and (min-width:800px) {
    header {
        display: flex;
        flex-direction: row-reverse;
        height: 100vh;
        gap: 2rem;
    }

    .img-display {
        flex: 1;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .img-display .img-container {
        width: 400px;
        height: 400px;
    }

    .info {
        background-color: var(--secondary-color2);
        flex: 1;
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        align-items: center;
    }

}

/* About Me */
#aboutMe-section {
    background-color: var(--secondary-color1);
    height: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.greeting {
    width: 60%;
    margin: 2em auto;
}


/* Technologies  */
#technologies-section {
    background-color: var(--secondary-color2);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.technologiesList-container {
    display: flex;
}

.technologies-container {
    margin: 1rem;
    padding: 1em;
}

.technologies-container h5 {
    font-size: 1.3em;
}

.technologies-container ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1em;
    padding: 2em;
}

#technologies-section .technologies-container:nth-of-type(1) {
    background-color: var(--primary-color1);
}

#technologies-section .technologies-container:nth-of-type(2) {
    background-color: var(--primary-color2);
}

#technologies-section .technologies-container:nth-of-type(3) {
    background-color: var(--primary-color3);
}

.technologies-container img {
    width: 50px;
    height: 50px;
}


/* Projects  */

#projects-section {
    background-color: var(--secondary-color1);
}

.projects-container {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    justify-content: center;
    align-content: center;
    margin-top: 3rem;
}

.project-container {
    position: relative;
    background-color: Pink;
}

.img-container {
    margin: 0;
    width: 300px;
    height: 200px;
}

.project-links {
    display: flex;
    justify-content: space-evenly;
    justify-items: center;
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    transform: scale(0);
    background-color: #dddddd16;
    -webkit-backdrop-filter: blur(1px);
    backdrop-filter: blur(1px);

}

.project-links a {
    align-self: center;
    width: 20%;
    height: 20%;
}

.project-container:hover .project-links {
    transform: scale(1);

}


/* Experience */

#experience-section {
    background-color: var(--secondary-color2);
    height: 300px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#experience-section h3 {
    margin-bottom: 1rem;
}

#experience-section p {
    font-size: 1em;
}

.experience-header {
    font-weight: bold;
}

/* Footer */

footer {
    background-color: var(--primary-color2);
    padding: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

footer .copyright {
    font-size: 0.8em;
}


.contact-links {
    margin: 3rem 0;
}

